public abstract class Compensation {
	private double Rate;
	public abstract double calculateWeeklyPay();
}
