

public class Driver {
	public static void main(String[] args) {
		if(args.length == 1){
			if (args[0].equals("-t")){

