public class Employee {
	private Compensation payGrade; //I really just want to put { get; set } here. I miss C#.

}
